# vimGL

./: .travis.yml  CMakeLists.txt  README.md
scripts/: build-SFML  cmake-makefile  cmake-xcode
src/main/: assets.cpp  assets.hpp  main.cpp
src/main/game/: context.cpp  context.hpp
src/main/keyboard/: handler.cpp  handler.hpp
